Removed watch demo

--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -96,8 +96,7 @@
     {
       "type": "text",
       "id": "secondary_button_text",
-      "label": "Secondary Button Text",
-      "default": "Learn More"
+      "label": "Secondary Button Text"
     },
     {
       "type": "url",
