--- a/sections/pricing.liquid
+++ b/sections/pricing.liquid
@@ -324,6 +324,12 @@
       font-size: 2.5rem;
     }
   }
+
+  .pricing-category-header:nth-of-type(1),
+.pricing-wrapper > .pricing-card:nth-of-type(2),
+.pricing-wrapper > .pricing-card:nth-of-type(3) {
+  display: none !important;
+}
 </style>
 
 {% schema %}
