--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -53,19 +53,17 @@
         </div>
 
         <div class="footer-column">
-          <h4>Support</h4>
-          <ul>
-            <li>
-              <a href="mailto:support@marketsniper.pro">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
-                  <polyline points="22,6 12,13 2,6"/>
-                </svg>
-                support@marketsniper.pro
-              </a>
-            </li>
-          </ul>
-        </div>
+  <h4>Support</h4>
+  <ul>
+    <li class="email-info">
+      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+        <polyline points="22,6 12,13 2,6"/>
+      </svg>
+      <span>support@marketsniper.pro</span>
+    </li>
+  </ul>
+</div>
       </div>
     </div>
 
