--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -43,14 +43,14 @@
         </div>
 
         <div class="footer-column">
-          <h4>Quick Links</h4>
-          <ul>
-            <li><a href="/#pricing">Plans</a></li>
-            <li><a href="/#features">Features</a></li>
-            <li><a href="/pages/about">About</a></li>
-            <li><a href="/pages/contact">Contact</a></li>
-          </ul>
-        </div>
+  <h4>Quick Links</h4>
+  <ul>
+    <li><a href="/#pricing">Pricing</a></li>
+    <li><a href="/#features">Features</a></li>
+    <li><a href="/pages/about">About</a></li>
+    <li><a href="/pages/contact">Contact</a></li>
+  </ul>
+</div>
 
         <div class="footer-column">
   <h4>Support</h4>
